crates/solidity-v2/testing/snapshots/diagnostics_output/structure/contract_should_be_abstract/unimplemented_interface/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 3656] Error: Contract "C" should be marked as abstract.
   ╭─[input.sol:9:1]
   │
 9 │ contract C is I {}
   │ ─────────┬────────  
   │          ╰────────── Error occurred here.
───╯
